--- a/Noxa.Emulation.Psp.Cpu.R4000/Noxa.Emulation.Psp.Cpu.R4000.vcproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000/Noxa.Emulation.Psp.Cpu.R4000.vcproj
@@ -5,10 +5,6 @@
 	Name="Noxa.Emulation.Psp.Cpu.R4000"
 	ProjectGUID="{2C88779C-50A1-4C47-85DD-17BE18BD9F7A}"
 	RootNamespace="Noxa::Emulation::Psp::Cpu"
-	SccProjectName="SAK"
-	SccAuxPath="SAK"
-	SccLocalPath="SAK"
-	SccProvider="SAK"
 	Keyword="ManagedCProj"
 	>
 	<Platforms>
@@ -187,7 +183,7 @@
 		/>
 		<ProjectReference
 			ReferencedProjectIdentifier="{7609D1BE-23AC-4E67-AD44-9D1E637FB202}"
-			RelativePathToProject="..\Noxa.Utilities\Noxa.Utilities.csproj"
+			RelativePathToProject=".\Noxa.Utilities\Noxa.Utilities.csproj"
 		/>
 	</References>
 	<Files>
