--- a/Noxa.Emulation.Psp.IO.Wifi/Noxa.Emulation.Psp.IO.Wifi.csproj
+++ b/Noxa.Emulation.Psp.IO.Wifi/Noxa.Emulation.Psp.IO.Wifi.csproj
@@ -9,10 +9,14 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Noxa.Emulation.Psp.IO.Wifi</RootNamespace>
     <AssemblyName>Noxa.Emulation.Psp.IO.Wifi</AssemblyName>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
