basic utilsforuser module - just has all the invalidate cache stuff nop'ed

--- a/Noxa.Emulation.Psp.Bios.GenericHle/Noxa.Emulation.Psp.Bios.GenericHle.csproj
+++ b/Noxa.Emulation.Psp.Bios.GenericHle/Noxa.Emulation.Psp.Bios.GenericHle.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Modules\ModuleMgrForUser.cs" />
     <Compile Include="Modules\SysMemUserForUser.cs" />
     <Compile Include="Modules\ThreadManForUser.cs" />
+    <Compile Include="Modules\UtilsForUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
