--- a/Noxa.Emulation.Psp/Noxa.Emulation.Psp.csproj
+++ b/Noxa.Emulation.Psp/Noxa.Emulation.Psp.csproj
@@ -26,6 +26,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -79,7 +80,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PspDebug.cs" />
     <Compile Include="Utilities\PerformanceTimer.cs" />
+    <Compile Include="Video\DisplayProperties.cs" />
     <Compile Include="Video\IVideoDriver.cs" />
+    <Compile Include="Video\VideoCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Noxa.Utilities\Noxa.Utilities.csproj">
