Basic command parsing part 1 Does enough stuff so that the simple tris sample will run, but it doesn't draw anything yet
Thinking about making the entire video driver do a form of dynarec for the display lists - this could
create some crazy performance as vertex formats would not have to be parsed and matrices would
not have to be built on every pass. I'm imagining something that keeps track of the 'hot lists' and
after a certain percentage of executions has been reached (i.e., if a display list is in the top 75%
of executed lists) it will be converted. A hash on the list instructions can be used for invalidation
as the list will still need to be constructed and this will allow for things like BJUMPS to vary (if
they can?). Ultimately this will give great perf gains as vertex buffers, materials, etc will all be
kept around and things can come close to native code!

--- a/Noxa.Emulation.Psp.Video.Direct3DM/Noxa.Emulation.Psp.Video.Direct3DM.csproj
+++ b/Noxa.Emulation.Psp.Video.Direct3DM/Noxa.Emulation.Psp.Video.Direct3DM.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Direct3DMVideo.cs" />
     <Compile Include="FrameBuffer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VideoDriver.CommandParser.cs" />
     <Compile Include="VideoDriver.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -63,6 +64,11 @@
       <Project>{7609D1BE-23AC-4E67-AD44-9D1E637FB202}</Project>
       <Name>Noxa.Utilities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\..\..\..\cygwin\home\noxa\newtoolchain\pspsdk\src\gu\doc\commands.txt">
+      <Link>commands.txt</Link>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
