Basic RTC functions added to BIOS (tried to use performance counter, but DateTime.Ticks seems to work better ^_^)
FrameBuffer now supports multiple buffers - I'm not sure if it's right, but it seems to work for the nehe1 sample OK

_listSync wait flipped in VideoDriver - the Sync() method now signals the semaphore and the background thread waits on it - this lets the CPU go as fast as possible without having to wait on the GPU

Still a lot of flickering in the video driver though; I'm pretty sure this is because sometimes there are frames that have no commands to display - need to figure out a proper Sync()

--- a/Noxa.Emulation.Psp.Bios.GenericHle/Noxa.Emulation.Psp.Bios.GenericHle.csproj
+++ b/Noxa.Emulation.Psp.Bios.GenericHle/Noxa.Emulation.Psp.Bios.GenericHle.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Modules\GeUser.cs" />
     <Compile Include="Modules\LoadExecForUser.cs" />
     <Compile Include="Modules\Power.cs" />
+    <Compile Include="Modules\Rtc.cs" />
     <Compile Include="Modules\SuspendForUser.cs" />
     <Compile Include="Modules\StdioForUser.cs" />
     <Compile Include="Modules\IoFileMgrForUser.cs" />
