Minor fixes to the HostFileSystem regarding AbsolutePath.
Iso file system implemented - seems to work.
There is a known issue regarding the streams returned by Open/OpenRead - you CANNOT set the position on them! This is because the stream is actually a pointer in to the ISO file, and when you get it it's not at position 0. Doing anything but relative seeks will cause problems. There is a workaround for this: any file under MaximumCachableStreamSize (current 4MB) will have it's own MemoryStream allocated for it.
I think a good workaround for this would be to subclass Stream and have it hide this behavior. I may do that next.

--- a/Noxa.Emulation.Psp.IO.Media.Iso/Noxa.Emulation.Psp.IO.Media.Iso.csproj
+++ b/Noxa.Emulation.Psp.IO.Media.Iso/Noxa.Emulation.Psp.IO.Media.Iso.csproj
@@ -26,6 +26,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,6 +35,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -54,6 +56,7 @@
     <Compile Include="MediaFolder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UmdDevice.cs" />
+    <Compile Include="UmdDevice.FileSystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Noxa.Emulation.Psp.Configuration\Noxa.Emulation.Psp.Configuration.csproj">
