Reverted GameLoader to do what it did before I hacked it up.
IsoStream class that now does some protected access to the ISO file stream - the cache code for small files still exists, it's just commented out. Perhaps it could be made an option in the future. A REALLY advanced system would use a dynamically-growable cache to cache the most frequently used small files.

--- a/Noxa.Emulation.Psp.IO.Media.Iso/Noxa.Emulation.Psp.IO.Media.Iso.csproj
+++ b/Noxa.Emulation.Psp.IO.Media.Iso/Noxa.Emulation.Psp.IO.Media.Iso.csproj
@@ -52,6 +52,7 @@
       <DependentUpon>MediaConfiguration.cs</DependentUpon>
     </Compile>
     <Compile Include="IsoFileSystem.cs" />
+    <Compile Include="IsoStream.cs" />
     <Compile Include="MediaFile.cs" />
     <Compile Include="MediaFolder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
