Little resize button that makes things easier to go 2x/3x/fullscreen (maximized, not a real fullscreen). The D3DM plugin is buggy though and not doing it's framebuffer sizing right, so although the things drawn to the display (like tris) are fine, the framebuffer is not!

--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -169,6 +169,7 @@
     </None>
     <None Include="Resources\PspShake.png" />
     <None Include="Resources\RemoveIcon.png" />
+    <Content Include="Resources\ResizeIcon.png" />
     <Content Include="Resources\SelectedMemoryStickIcon.png" />
     <Content Include="Resources\SelectedUmdIcon.png" />
     <None Include="Resources\SmallUmdIcon.png" />
