--- a/Noxa.Emulation.Psp.Player/app.config
+++ b/Noxa.Emulation.Psp.Player/app.config
@@ -10,6 +10,9 @@
             <setting name="ComponentSettings" serializeAs="String">
                 <value />
             </setting>
+            <setting name="PlayerDisplaySize" serializeAs="String">
+                <value>Original</value>
+            </setting>
         </Noxa.Emulation.Psp.Player.Properties.Settings>
     </userSettings>
 </configuration>
