Stubbed out a lot of stuff in the BIOS - besides the mysterious sceSAScore, all stubs for ToE, AI-GO, and PB are present. PB thankfully does not use SAScore, so it'll be the first one to get working I imagine. I have a hunch that SAScore deals with audio, so as long as the code is robust enough to handle failure, it may even work.

--- a/Noxa.Emulation.Psp.Cpu.R4000DynRec/Noxa.Emulation.Psp.Cpu.R4000DynRec.csproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000DynRec/Noxa.Emulation.Psp.Cpu.R4000DynRec.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Coprocessor2.cs" />
     <Compile Include="Core.cs" />
     <Compile Include="Cpu.cs" />
+    <Compile Include="Cpu.Execution.cs" />
+    <Compile Include="Cpu.Generation.cs" />
     <Compile Include="Generation\CoreInstructions.cs" />
     <Compile Include="Generation\FpuInstructions.cs" />
     <Compile Include="Generation\GenerationContext.cs" />
