Woohoo! Should have looked at prxtool sooner - now the ElfFile loader properly relocates data segments, and as such real games (kind of) run! I can get pretty far in PB, and the trace looks legit!
Fixed a bunch of small things in the IoFileMgrForUser module, as well as some path stuff in the media components. With these changes, including some UmdUser stuff, the pspsdk fileio sample runs and can dump the BOOT.BIN from the UMD (the others don't run because I don't emulate the flash and I don't do the memory ranges in a compatible format for the dump, but that should work too).

Re-enabled the GamePicker (in place of the XMB), as I think it's the future. It's not polished yet, and the primary mode ('Recent Games') isn't implemented, but it does work.

--- a/Noxa.Emulation.Psp.Bios.GenericHle/Noxa.Emulation.Psp.Bios.GenericHle.csproj
+++ b/Noxa.Emulation.Psp.Bios.GenericHle/Noxa.Emulation.Psp.Bios.GenericHle.csproj
@@ -43,10 +43,15 @@
   <ItemGroup>
     <Compile Include="GenericHleBios.cs" />
     <Compile Include="HleInstance.cs" />
+    <Compile Include="Modules\Atrac3plus.cs" />
+    <Compile Include="Modules\Audio.cs" />
     <Compile Include="Modules\Ctrl.cs" />
     <Compile Include="Modules\DisplayUser.cs" />
     <Compile Include="Modules\GeUser.cs" />
+    <Compile Include="Modules\InterruptManager.cs" />
+    <Compile Include="Modules\KernelLibrary.cs" />
     <Compile Include="Modules\LoadExecForUser.cs" />
+    <Compile Include="Modules\Mpeg.cs" />
     <Compile Include="Modules\Power.cs" />
     <Compile Include="Modules\Rtc.cs" />
     <Compile Include="Modules\SuspendForUser.cs" />
@@ -57,6 +62,8 @@
     <Compile Include="Modules\ModuleMgrForUser.cs" />
     <Compile Include="Modules\SysMemUserForUser.cs" />
     <Compile Include="Modules\ThreadManForUser.cs" />
+    <Compile Include="Modules\UmdUser.cs" />
+    <Compile Include="Modules\Utility.cs" />
     <Compile Include="Modules\UtilsForUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
