Added a helper method to all the IComponentInstance's to get their parent factory type. Modified IUmdDevice so that it supports changing the loaded UMD after creation (used from the picker to swap games).
The GamePicker is looking a LOT better and is fully functional now. It has a UMD tab for UMD images and a MS tab for EBOOT's. You can add/remove/clear UMD images from the listing and it's remembered across sessions, as is the last played game. Since (hopefully) most people will be playing UMDs, the default of showing the UMD screen will be nice.

Things could still use some tweaking, but now I can concentrate on other things. On my TODO are improvements to the speed (so there is no/little latency after hitting 'Start'), but that will require some work (serializing GameInformation structures for everything, etc).

--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -69,6 +69,12 @@
     <Compile Include="GamePicker\GameEntry.Designer.cs">
       <DependentUpon>GameEntry.cs</DependentUpon>
     </Compile>
+    <Compile Include="GamePicker\GameListing.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GamePicker\GameListing.Designer.cs">
+      <DependentUpon>GameListing.cs</DependentUpon>
+    </Compile>
     <Compile Include="GamePicker\PickerDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,6 +108,10 @@
     <EmbeddedResource Include="GamePicker\GameEntry.resx">
       <SubType>Designer</SubType>
       <DependentUpon>GameEntry.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GamePicker\GameListing.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>GameListing.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GamePicker\PickerDialog.resx">
       <SubType>Designer</SubType>
