--- a/Noxa.Emulation.Psp.Player/app.config
+++ b/Noxa.Emulation.Psp.Player/app.config
@@ -13,6 +13,9 @@
             <setting name="PlayerDisplaySize" serializeAs="String">
                 <value>Original</value>
             </setting>
+            <setting name="LastPlayedGame" serializeAs="String">
+                <value />
+            </setting>
         </Noxa.Emulation.Psp.Player.Properties.Settings>
     </userSettings>
 </configuration>
