--- a/Noxa.Emulation.Psp.Player/Properties/Settings.settings
+++ b/Noxa.Emulation.Psp.Player/Properties/Settings.settings
@@ -11,5 +11,11 @@
     <Setting Name="PlayerDisplaySize" Type="System.String" Scope="User">
       <Value Profile="(Default)">Original</Value>
     </Setting>
+    <Setting Name="RecentGames" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="LastPlayedGame" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
