--- a/Noxa.Emulation.Psp.Video.Direct3DM/Noxa.Emulation.Psp.Video.Direct3DM.csproj
+++ b/Noxa.Emulation.Psp.Video.Direct3DM/Noxa.Emulation.Psp.Video.Direct3DM.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VideoDriver.CommandParser.cs" />
     <Compile Include="VideoDriver.cs" />
+    <Compile Include="VideoDriver.Generation.cs" />
+    <Compile Include="VideoDriver.Textures.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Noxa.Emulation.Psp.Configuration\Noxa.Emulation.Psp.Configuration.csproj">
