Work done to XNA video component. I'm taking my time and doing things right (I think) as opposed to the MDX plugin which was crap. The only thing done so far is the framebuffer and it seems to work _ok_. In my ideal world framebuffer writes would be both fast and clean, but it seems like I can only get one or the other. As opposed to the MDX component, this one actually writes to the DX backbuffer and as such can perform much better and _work_ (the previous 'solution' required a texture that would be written to then blted to the screen). The problem is that although fast (4000-5000 fps with a dirty framebuffer) it sometimes doesn't look right. There is also the issue of the backbuffer being very slow to read from (drops to 0-1fps), meaning that crazy software-like rendering techniques won't work right (ones that blend values on to the framebuffer). I'd still like to find a solution, however this works well enough for now.
One trick I added is that only dirty regions of the framebuffer will be copied over, and then only ones that are non-zero. The non-zero thing is kind of arbitrary and as I go I may change it, but the dirty rects seem to work great as often times with the console apps I'm running only a few characters will change per frame (good for fps counters/etc).

Going to start playing with 3D next to get my triangles drawing again, although one tricky thing I remembered is that XNA is right handed, where as PSP/MDX are left handed. I may have to do some conversion when I read the matrices to get stuff to work.

--- a/Noxa.Emulation.Psp.Video.Xna/Noxa.Emulation.Psp.Video.Xna.csproj
+++ b/Noxa.Emulation.Psp.Video.Xna/Noxa.Emulation.Psp.Video.Xna.csproj
@@ -18,6 +18,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,6 +35,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrameBuffer.cs" />
+    <Compile Include="VideoDriver.CommandParser.cs" />
     <Compile Include="VideoDriver.cs" />
     <Compile Include="XnaVideo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
