--- a/Noxa.Emulation.Psp.Video.Xna/Noxa.Emulation.Psp.Video.Xna.csproj
+++ b/Noxa.Emulation.Psp.Video.Xna/Noxa.Emulation.Psp.Video.Xna.csproj
@@ -27,6 +27,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Xna.Framework, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f48fa5f25d27e8ff, processorArchitecture=x86" />
