Little app to help build instruction mix lists (pipe in psp-objdump output or read it from a file and it will spit out a sorted list of instructions and their usage count). It would also be nice to have some statistics stuff in the dynarec cpu to help track down bugs.
Fixed a bug in mult instruction.

Direct3DM video component now runs on MDX1.1, although the framebuffer is messed up and only the triangles in Lesson1 draw.

Still need to find a nice way to test things, as there is obviously a bug in some instruction and it's proving incredibly difficult to find.

--- a/Tests/Test1/Test1.cbp
+++ b/Tests/Test1/Test1.cbp
@@ -20,16 +20,20 @@
 		</Build>
 		<Compiler>
 			<Add option="-fno-exceptions"/>
+			<Add directory="C:\cygwin\usr\local\pspdev\psp\include"/>
+			<Add directory="C:\cygwin\usr\local\pspdev\psp\sdk\include"/>
 		</Compiler>
 		<Linker>
 			<Add library="libg.a"/>
 			<Add library="libm.a"/>
-			<Add library="libstc++.a"/>
+			<Add library="libstdc++.a"/>
 			<Add library="libsupc++.a"/>
 			<Add library="libg.a"/>
 			<Add library="libpsprtc.a"/>
 			<Add library="libpspuser.a"/>
 			<Add library="libpsputility.a"/>
+			<Add library="libpspnet.a"/>
+			<Add library="libpspnet_inet.a"/>
 			<Add library="libpspdebug.a"/>
 			<Add library="libpsplibc.a"/>
 			<Add library="libpspgum.a"/>
@@ -44,6 +48,8 @@
 			<Add library="libpsppower_driver.a"/>
 			<Add library="libpspgum_vfpu.a"/>
 			<Add library="libpspkernel.a"/>
+			<Add directory="C:\cygwin\usr\local\pspdev\psp\lib"/>
+			<Add directory="C:\cygwin\usr\local\pspdev\psp\sdk\lib"/>
 		</Linker>
 		<Unit filename="main.cpp">
 			<Option compilerVar="CPP"/>
