Added the ability to emit branch tables in methods - this would allow the caller to say 'jump to instruction N in block X'. Currently new blocks are generated even if an old block contains the target address, but with this new method I should be able to fix that (would save on code gen time and storage for all the methods). Have to see if having the branch table and the requisite branch on every execute is worth it perf wise.
Debugger UI work. Need to refactor some of the sfuff I've done already, as I forgot that I have the IDebugInspector stuff and that's where most things should be.

Confusingly added CoreState, which is a read only property on ICpuCore that allows the caller to get some detailed information about the state of the core. The reason I don't have most of this information redily accessible from ICpuCore is that the underlying implementation may not model it in such a way that it would be easy to get, or may not have the data available at all times. The existing Context property also didn't fit, as that is used for serializing/deserializing the core state and has too much implementation-specific garbage. So now there is State. Kind of ugly, but for all the right reasons.

--- a/Noxa.Emulation.Psp.Player.Development/Noxa.Emulation.Psp.Player.Development.csproj
+++ b/Noxa.Emulation.Psp.Player.Development/Noxa.Emulation.Psp.Player.Development.csproj
@@ -151,6 +151,10 @@
       <SubType>Designer</SubType>
       <DependentUpon>Studio.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Tools\CpuPane.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>CpuPane.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Tools\DisassemblyDocument.resx">
       <SubType>Designer</SubType>
       <DependentUpon>DisassemblyDocument.cs</DependentUpon>
