--- a/Noxa.Emulation.Psp/Noxa.Emulation.Psp.csproj
+++ b/Noxa.Emulation.Psp/Noxa.Emulation.Psp.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Bios\IStatefulModule.cs" />
     <Compile Include="ComponentIssue.cs" />
     <Compile Include="ComponentParameters.cs" />
+    <Compile Include="Cpu\CoreState.cs" />
     <Compile Include="Cpu\IAvcDecoder.cs" />
     <Compile Include="Cpu\IClock.cs" />
     <Compile Include="Cpu\ICpu.cs" />
