--- a/Dependencies/DockPanel/DockPanel2005/DockPanel2005.vbproj
+++ b/Dependencies/DockPanel/DockPanel2005/DockPanel2005.vbproj
@@ -35,10 +35,6 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="WeifenLuo.WinFormsUI.Docking, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\WinFormsUI\bin\Release\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
@@ -133,6 +129,12 @@
     <Content Include="Docking\Resources\DockPaneStrip.OptionsEnabled.bmp" />
     <Content Include="Docking\Resources\DockPaneStrip.OverflowDisabled.bmp" />
     <Content Include="Docking\Resources\DockPaneStrip.OverflowEnabled.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WinFormsUI\WinFormsUI2005.csproj">
+      <Project>{D3C782BA-178E-4235-A3BA-8C11DEBB6BEE}</Project>
+      <Name>WinFormsUI2005</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
