--- a/Noxa.Emulation.Psp.Video.Direct3DM/Noxa.Emulation.Psp.Video.Direct3DM.csproj
+++ b/Noxa.Emulation.Psp.Video.Direct3DM/Noxa.Emulation.Psp.Video.Direct3DM.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Direct3DMVideo.cs" />
+    <Compile Include="DummyFrameBuffer.cs" />
     <Compile Include="FrameBuffer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VideoDriver.CommandParser.cs" />
